# Automated_Signature

./: .gitignore  .gitmodules  .ignore  AUTOMATION_INTEGRATION.md  FLASK_SCANNER_HTTP_INTEGRATION.md  README.md  TECHNICAL_DOCUMENTATION.md  UBUNTU_RELEASE_GUIDE.md  fisheye_calibrate.py  main.py  pyproject.toml  requirements.txt  run_scanner_service.py
PythonVersion/: FLASK_SCANNER_HTTP_INTEGRATION.md  README.md  TECHNICAL_DOCUMENTATION.md  UBUNTU_RELEASE_GUIDE.md  __init__.py  dependency_injection.py  distance_stats.json  main.py  requirements.txt
PythonVersion/api/: __init__.py  app.py  printer_controller.py
PythonVersion/flask_app/: __init__.py  __main__.py  app.py  config.py  pen_kiosk_app.py
PythonVersion/models/: __init__.py  contracts.py
PythonVersion/security/: __init__.py
PythonVersion/stores/: __init__.py  request_log_store.py
a4-flating/: AUTOMATION_INTEGRATION.md  FLASK_SCANNER_HTTP_INTEGRATION.md  README.md  requirements.txt
diwan_signature/: __init__.py  __main__.py  cli.py  dependency_injection.py
docs/: CHANGE_PEN_COMMAND.md  TECHNICAL_DOCUMENTATION.md  UBUNTU_RELEASE_GUIDE.md
docs/doxygen/: Doxyfile  (+2 more)
plotter-signature/: README.md  appsettings.json  requirements.txt
plotter_signature/: __init__.py  __main__.py  cli.py
samples/: sample_print_request.json
scanner/: __init__.py  api_client.py  camera.py  capture.py  config.py  detect.py  geometry.py  preprocess.py  readability.py  ui.py  warp.py
scanner_service/: app.py  client.py  flask_bridge.py  models.py  worker.py
tests/: test_scanner_service.py  test_scanner_service_client.py
(+120 files in other folders)
